--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
 		"latte/latte": "^2.10",
 		"tracy/tracy": "^2.8",
 		"contributte/console": "^0.9",
-		"nettrine/orm": "^0.8"
+		"nettrine/orm": "^0.8",
+		"milo/github-api": "^1.4"
 	},
 	"autoload": {
 		"classmap": ["app/Bootstrap.php"]
