--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 		"nette/security": "^3.1",
 		"nette/utils": "^3.2",
 		"latte/latte": "^2.10",
-		"tracy/tracy": "^2.8"
+		"tracy/tracy": "^2.8",
+		"contributte/console": "^0.9"
 	},
 	"autoload": {
 		"classmap": ["app/Bootstrap.php"]
